# Simple_Chat

./: .gitignore  README.md  main.py  pyproject.toml
ai_service/: main_ai.py
app/: __init__.py  config.py  forms.py  models.py  routes.py
app/shared/: config.py
static/css/: style_input_form.css  style_user_card.css
static/js/: chat.js
templates/: base.html  chat.html  index.html
templates/components/: card.html  input-field.html  navbar.html  user-card.html
