[project]
name = "68-simple-chat"
version = "0.1.0"
description = "A lightweight chat application built with Flask and SQLAlchemy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bootstrap-flask>=2.5.0",
    "djlint>=1.36.4",
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "httpx>=0.28.1",
    "openai>=2.14.0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.30.0",
]

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 88

